--- a/contact/src/main/resources/static/index.html
+++ b/contact/src/main/resources/static/index.html
@@ -7,6 +7,8 @@
 <body>
     
     <h1> Bienvenue !</h1>
-     <p>Test for work <a href="/liste">here</a></p>
+     <p>Lister les contacts <a href="/liste.html">here</a></p>
+     
+     <p>Ajouter un contact <a href="/addContact.html">here</a></p>
 </body>
 </html>
